<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    >
<!--    comment-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="@dimen/square_size"
            android:layout_height="@dimen/square_size"
            android:id="@+id/settings_arrow_back"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="?attr/colorPrimaryVariant"
            android:backgroundTint="@color/white"
            app:cornerRadius="0dp"
            style="?android:attr/borderlessButtonStyle"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/settings_button"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        style="@style/SettingsTextLine"
        android:text="@string/dark_mode"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end"
            >

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_box"
                android:layout_marginEnd="@dimen/settings_icon_padding"
                android:layout_marginBottom="@dimen/margin_box"
                android:scaleX="1.2"
                android:scaleY="1.2"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:theme="@style/SwitchCompatTheme"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/SettingsLineWrapper"
        android:id="@+id/share_app_line">
        <TextView
            style="@style/SettingsTextLine"
            android:text="@string/share_app"
            />
        <LinearLayout
            style="@style/SettingsImageWrapper">
            <ImageView
                style="@style/SettingsImageLine"
                android:src="@drawable/share"
                android:contentDescription="@string/share_app"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        style="@style/SettingsLineWrapper"
        android:id="@+id/message_support_line"
        >
        <TextView
            style="@style/SettingsTextLine"
            android:text="@string/message_support"
            />
        <LinearLayout
            style="@style/SettingsImageWrapper">
            <ImageView
                style="@style/SettingsImageLine"
                android:src="@drawable/support"
                android:contentDescription="@string/message_support" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        style="@style/SettingsLineWrapper"
        android:id="@+id/user_agreement_line">
        >
        <TextView
            style="@style/SettingsTextLine"
            android:text="@string/user_agreement"
            />
        <LinearLayout
            style="@style/SettingsImageWrapper">
            <ImageView
                style="@style/SettingsImageLine"
                android:src="@drawable/arrow_forward"
                android:contentDescription="@string/user_agreement" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>